--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="box">
                 <h3>想一起看的电影</h3>
                 <div class="box2"><span>招魂</span></div>
-                <div class="box2">怦然心动</div>
-                <div class="box2">NA</div>
+                <div class="box2"><span>怦然心动</span></div>
+                <div class="box2">罗马假日</div>
                 <div class="box2">NA</div>
                 <div class="box2">NA</div>
 
@@ -42,7 +42,7 @@
                 <div class="box2"><span>撑一把伞</span></div>
                 <div class="box2">一起做甜品</div>
                 <div class="box2">看烟花</div>
-                <div class="box2">要一直在一起</div>
+                <div class="box2">烤年糕！</div>
             </div>
         </div>
 
@@ -58,6 +58,8 @@
         <p>1.17 连麦看了恐怖片/云同桌的开端</p>
         <p>1.23 看电影 抓娃娃 吃日料 表白 成功牵手///要素过多</p>
         <p>1.27 第一次在雨中散步</p>
+        <p>1.30 第一次一起出来写作业/其实主要在看电影</p>
+        <p>2.6 一小时同桌体验/差点被抓包==虚惊一场</p>
         <p><span>未完待续</span></p>
 
     </div>
@@ -68,6 +70,8 @@
             <p>嘿嘿嘿，之前说的秘密就是这个，不知道你喜不喜欢（我的设计水平也就这样了哈哈哈哈 好像有点简陋）。虽然计时器的设计参考了一下教程，但是所有代码都是手敲的哦/快夸我！</p>
             <p>唔，part2那个ToDoList一直在纠结写什么比较好，网上搜了一堆情侣清单/啊有点羞耻，最后选了几个看起来比较有可行性的放上去。不过和你在一起做什么都很美好呀。</p>
             <p>aaa可恶不知道写什么了 这里怎么这么空！我是不是应该把字放大一点点。</p>
+            <p>挂在github上改起来也很方便xixi以后可以不定期更新一波</p>
+            <p>“树在，山在，大地在，岁月在，我在，你还要怎样更好的世界。”--更新于2.6</p>
         </div>
 
     </div>
