--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="box2"><span>招魂</span></div>
                 <div class="box2"><span>怦然心动</span></div>
                 <div class="box2">罗马假日</div>
-                <div class="box2">NA</div>
-                <div class="box2">NA</div>
+                <div class="box2">不知道了</div>
+                <div class="box2">先占个位置</div>
 
             </div>
             <div class="box">
@@ -60,6 +60,8 @@
         <p>1.27 第一次在雨中散步</p>
         <p>1.30 第一次一起出来写作业/其实主要在看电影</p>
         <p>2.6 一小时同桌体验/差点被抓包==虚惊一场</p>
+        <p>2.11 云跨年</p>
+        <p>2.14 情人节！</p>
         <p><span>未完待续</span></p>
 
     </div>
@@ -71,7 +73,7 @@
             <p>唔，part2那个ToDoList一直在纠结写什么比较好，网上搜了一堆情侣清单/啊有点羞耻，最后选了几个看起来比较有可行性的放上去。不过和你在一起做什么都很美好呀。</p>
             <p>aaa可恶不知道写什么了 这里怎么这么空！我是不是应该把字放大一点点。</p>
             <p>挂在github上改起来也很方便xixi以后可以不定期更新一波</p>
-            <p>“树在，山在，大地在，岁月在，我在，你还要怎样更好的世界。”--更新于2.6</p>
+            <p>“树在，山在，大地在，岁月在，我在，你还要怎样更好的世界。”--更新于2.14</p>
         </div>
 
     </div>
