--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container2">
-        <h2><span>We have been together for</span>Jan 23</h2>
+        <h2><span>We have been together for</span>SUSPEND</h2>
         <div class="countdown">
             <div id="day">NA</div>
             <div id="hour">NA</div>
@@ -71,13 +71,13 @@
             <p>唔，part2那个ToDoList一直在纠结写什么比较好，网上搜了一堆情侣清单/啊有点羞耻，最后选了几个看起来比较有可行性的放上去。不过和你在一起做什么都很美好呀。</p>
             <p>aaa可恶不知道写什么了 这里怎么这么空！我是不是应该把字放大一点点。</p>
             <p>挂在github上改起来也很方便xixi以后可以不定期更新一波</p>
-            <p>“树在，山在，大地在，岁月在，我在，你还要怎样更好的世界。”--更新于2.14</p>
+            <p>那就暂且 高考加油--更新于2.17</p>
         </div>
 
     </div>
 
     <script type="text/javascript">
-        var countDate= new Date('Jan 23,2021 00:00:00').getTime();
+    /*    var countDate= new Date('Jan 23,2021 00:00:00').getTime();
 
         function newYear() {
             var now=new Date().getTime();
@@ -90,7 +90,12 @@
             var d=Math.floor(gap / (day));
             var h=Math.floor((gap % (day))/(hour));
             var m=Math.floor((gap % (hour))/(minute));
-            var s=Math.floor((gap % (minute))/(second));
+            var s=Math.floor((gap % (minute))/(second));*/
+        
+            var d=25;
+            var h=23;
+            var m=26;
+            var s=0;
 
             document.getElementById('day').innerText=d;
             document.getElementById('hour').innerText=h;
