--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <script type="text/javascript">
-    /*    var countDate= new Date('Jan 23,2021 00:00:00').getTime();
+        var countDate= new Date('Jan 23,2021 00:00:00').getTime();
 
         function newYear() {
             var now=new Date().getTime();
@@ -87,7 +87,7 @@
             var hour = minute * 60;
             var day = hour * 24;
 
-            var d=Math.floor(gap / (day));
+           /* var d=Math.floor(gap / (day));
             var h=Math.floor((gap % (day))/(hour));
             var m=Math.floor((gap % (hour))/(minute));
             var s=Math.floor((gap % (minute))/(second));*/
